--- a/FClient/FClient/Web.config
+++ b/FClient/FClient/Web.config
@@ -10,6 +10,10 @@
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
+  <connectionStrings>
+  <add name="DatabaseFClient" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=DatabaseFClient-20181026144350; Integrated Security=True; MultipleActiveResultSets=True;"
+    providerName="System.Data.SqlClient" />
+</connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
