--- a/FClient/FClient/FClient.csproj
+++ b/FClient/FClient/FClient.csproj
@@ -124,10 +124,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Models\AbstractRepository.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Establishment.cs" />
+    <Compile Include="Models\EstablishmentRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
