--- a/FClient/FClient/Web.config
+++ b/FClient/FClient/Web.config
@@ -11,7 +11,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
   <connectionStrings>
-  <add name="DatabaseFClient" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=DatabaseFClient-20181026144350; Integrated Security=True; MultipleActiveResultSets=True;"
+  <add name="DatabaseFClient" connectionString="Data Source=(localdb)\MYSQLLocalDB; Initial Catalog=DatabaseFClient-20181026144350; Integrated Security=True; MultipleActiveResultSets=True;Uid=root;Pwd=root;"
     providerName="System.Data.SqlClient" />
 </connectionStrings>
   <system.web>
